--- a/victoriametrics/configmap.yaml
+++ b/victoriametrics/configmap.yaml
@@ -254,6 +254,25 @@ metadata:
   name: victoriametrics-cm-static
   namespace: metrics
 data:
-  prometheus.yml: "scrape_config:\n- job_name: eva01 \n  static_configs:\n  - targets:\n    - localhost:8429\n- job_name: pi \n  static_configs:\n  - targets:\n      - 192.168.1.13:9100\n- job_name: cloudflared\n  static_configs:\n  - targets:\n    - cloudflared-svc.cloudflared\n"
----
-
+  prometheus.yml: |
+    scrape_configs:
+    - job_name: eva01
+      static_configs:
+      - targets:
+        - 192.168.1.22:9100
+    - job_name: eva02
+      static_configs:
+      - targets:
+        - 192.168.1.2:9100
+    - job_name: eva03
+      static_configs:
+      - targets:
+        - 192.168.1.23:9100
+    - job_name: eva04
+      static_configs:
+      - targets:
+        - 192.168.1.193:9100
+    - job_name: cloudflared
+      static_configs:
+      - targets:
+        - cloudflared-svc.cloudflared
