--- a/cloudflared/configmap.yaml
+++ b/cloudflared/configmap.yaml
@@ -36,6 +36,8 @@ data:
       service: http://search-svc.search
     - hostname: automate.mvaldes.dev
       service: http://n8n-svc.n8n
+    - hostname: db.mvaldes.dev
+      service: http://nocodb-svc.nocodb
     - hostname: mvaldes.dev
       service: http://blog-svc.blog
     - service: http_status:404
