--- a/fluxcd/arrs.yaml
+++ b/fluxcd/arrs.yaml
@@ -68,3 +68,16 @@ spec:
   prune: true
   timeout: 1m
 ---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: flaresolverr-flux
+  namespace: flux-system
+spec:
+  interval: 10m
+  sourceRef:
+    kind: GitRepository
+    name: homelab-repository
+  path: "./arrs/flaresolverr"
+  prune: true
+  timeout: 1m
