updating fluxcd resource versions

--- a/loki/loki.yaml
+++ b/loki/loki.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: loki
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: loki-release 
