--- a/grafana/grafana.yaml
+++ b/grafana/grafana.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: grafana
 ---
-apiVersion: source.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: grafana-helm
@@ -12,7 +12,7 @@ spec:
   interval: 1m0s
   url: https://grafana.github.io/helm-charts
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: grafana-release
