--- a/blog/service.yaml
+++ b/blog/service.yaml
@@ -11,4 +11,18 @@ spec:
   - protocol: TCP 
     port: 80
     targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: about-svc 
+  namespace: blog 
+spec:
+  selector:
+    app: about 
+  type: ClusterIP
+  ports:
+  - protocol: TCP 
+    port: 80
+    targetPort: 80
 
