--- a/blog/deployment.yaml
+++ b/blog/deployment.yaml
@@ -37,4 +37,44 @@ spec:
         ports:
         - containerPort: 80
       restartPolicy: Always
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: about
+  namespace: blog
+  labels:
+    app:  about
+spec:
+  selector:
+    matchLabels:
+      app:  about
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: about
+    spec:
+      containers:
+      - name: about
+        image: rorix/about:latest
+        imagePullPolicy: 
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+          limits:
+            cpu: 100m
+            memory: 100Mi
+        livenessProbe:
+          tcpSocket:
+            port: 80
+          initialDelaySeconds: 5
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
+          periodSeconds: 10
+        ports:
+        - containerPort: 80
+      restartPolicy: Always
 
