--- a/vault/configmap.yaml
+++ b/vault/configmap.yaml
@@ -6,29 +6,26 @@ metadata:
 data:
   values.yaml: |
     server:
-    standalone:
-      enabled: true
-      config: |
-        ui = true
+      standalone:
+        enabled: true
+        config: |
+          ui = true
 
-        listener "tcp" {
-          tls_disable = 1
-          address = "[::]:8200"
-          cluster_address = "[::]:8201"
-        }
-        storage "file" {
-          path = "/vault/data"
-        }
-    service:
-      enabled: true
-    dataStorage:
-      enabled: true
-      size: 10Gi
-      storageClass: null
-      accessMode: ReadWriteOnce
+          listener "tcp" {
+            tls_disable = 1
+            address = "[::]:8200"
+            cluster_address = "[::]:8201"
+          }
+          storage "file" {
+            path = "/vault/data"
+          }
+      service:
+        enabled: true
+      dataStorage:
+        enabled: true
+        size: 5Gi
+        storageClass: nfs-k8s-keep
+        accessMode: ReadWriteOnce
     ui:
-      enabled: true
-      serviceType: ClusterIP 
-
-
-
+     enabled: true
+     serviceType: ClusterIP
