--- a/fluxcd/images/image-automation.yaml
+++ b/fluxcd/images/image-automation.yaml
@@ -1,37 +1,24 @@
 apiVersion: image.toolkit.fluxcd.io/v1beta2
 kind: ImageUpdateAutomation
 metadata:
-  name: bot-automation 
-  namespace: flux-system 
+  name: bot-automation
+  namespace: flux-system
 spec:
-  interval: 10m
-  sourceRef:
-    kind: GitRepository
-    name: homelab-repository 
   git:
+    checkout:
+      ref:
+        branch: main
     commit:
       author:
         email: fluxcdbot@users.noreply.github.com
         name: fluxcdbot
-      messageTemplate: |-
-        Automated image update
-      
-        Automation name: {{ .AutomationObject }}
-
-        Files:
-        {{ range $filename, $_ := .Changed.FileChanges -}}
-        - {{ $filename }}
-        {{ end -}}
-
-        Objects:
-        {{ range $resource, $changes := .Changed.Objects -}}
-        - {{ $resource.Kind }} {{ $resource.Name }}
-          Changes:
-        {{- range $_, $change := $changes }}
-            - {{ $change.OldValue }} -> {{ $change.NewValue }}
-        {{ end -}}
-        {{ end -}}
+      messageTemplate: '{{range .Changed.Changes}}{{print .OldValue}} -> {{println .NewValue}}{{end}}'
     push:
       branch: main
+  interval: 30m0s
+  sourceRef:
+    kind: GitRepository
+    name: homelab-repository
   update:
     path: ./bots
+    strategy: Setters
