--- a/fluxcd/notifications/notification-alert.yaml
+++ b/fluxcd/notifications/notification-alert.yaml
@@ -19,3 +19,7 @@ spec:
       name: '*'
     - kind: GitRepository 
       name: '*'
+    - kind: ImageUpdateAutomation
+      name: '*'
+    - kind: ImageRepository
+      name: '*'
