--- a/external-secrets/external-secrets.yaml
+++ b/external-secrets/external-secrets.yaml
@@ -28,3 +28,7 @@ spec:
         name: external-secrets-helm
       version: 0.17.0
   interval: 1m0s
+  install:
+    crds: CreateReplace
+  upgrade:
+    crds: CreateReplace
