--- a/external-secrets/external-secrets.yaml
+++ b/external-secrets/external-secrets.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: external-secrets
----
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
@@ -30,5 +25,6 @@ spec:
   interval: 1m0s
   install:
     crds: CreateReplace
+    createNamespace: true
   upgrade:
     crds: CreateReplace
