external-secrets image override

--- a/external-secrets/external-secrets.yaml
+++ b/external-secrets/external-secrets.yaml
@@ -28,3 +28,9 @@ spec:
     createNamespace: true
   upgrade:
     crds: CreateReplace
+  values:
+    image:
+      repository: ghcr.io/external-secrets/external-secrets
+      tag: v0.17.0
+      pullPolicy: IfNotPresent
+
