eso using pre-created sa

--- a/base/secretstore.yaml
+++ b/base/secretstore.yaml
@@ -13,13 +13,13 @@ spec:
       auth:
         kubernetes:
           mountPath: "kubernetes"
-          role: "vault-service-role"
+          role: "vault-role"
           serviceAccountRef:
-            name: "v-root-vault-se-1750179687-zz6hib83gezxsbqvbee076ci"
+            name: "vault-service-account"
           secretRef:
             name: "vault-token"
             namespace: "vault"
-            key: "bot-token"
+            key: "token"
 ---
 apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
@@ -32,13 +32,14 @@ spec:
     vault: 
       server: "https://vault.mvaldes.dev"
       path: "core"
+      version: "v2"
       auth:
         kubernetes:
           mountPath: "kubernetes"
-          role: "vault-service-role"
+          role: "vault-role"
           serviceAccountRef:
-            name: "v-root-vault-se-1750179687-zz6hib83gezxsbqvbee076ci"
+            name: "vault-service-account"
           secretRef:
             name: "vault-token"
             namespace: "vault"
-            key: "bot-token"
+            key: "token"
