--- a/bots/external-secrets.yaml
+++ b/bots/external-secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: "bot-secrets"
+  namespace: bots
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
