--- a/metallb/kustomization.yaml
+++ b/metallb/kustomization.yaml
@@ -1,5 +1,6 @@
-apiVersion:
-kind:
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
   - github.com/metallb/metallb/config/native?ref=v0.15.2
-  - metallb-cm.yaml
+  - address-pool.yaml
+  - l2-adv.yaml
