--- a/blog/deployment.yaml
+++ b/blog/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: blog
-        image: rorix/blog:latest
+        image: rorix/blog:latest # {"$imagepolicy" : "flux-system:blog-policy"}
         imagePullPolicy: 
         resources:
           requests:
