--- a/fluxcd/images/image-policy.yaml
+++ b/fluxcd/images/image-policy.yaml
@@ -10,3 +10,16 @@ spec:
   policy:
     alphabetical:
       order: asc
+---
+apiVersion: image.toolkit.fluxcd.io/v1beta2
+kind: ImagePolicy
+metadata:
+  name: blog-policy
+  namespace: flux-system
+spec:
+  imageRepositoryRef:
+    name: blog-repository
+  digestReflectionPolicy: IfNotPresent
+  policy:
+    alphabetical:
+      order: asc
