updating grafana ini

--- a/grafana/grafana-cm.yaml
+++ b/grafana/grafana-cm.yaml
@@ -33,10 +33,10 @@ data:
 
     # ini
     grafana.ini:
-      [plugins]
-      allow_loading_unsigned_plugins: victoriametrics-logs-datasource
-      [feature_toggles]
-      provisioning = true
-      kubernetesDashboards = true
-      grafanaAdvisor = true
-      alertingListViewV2 = true
+      plugins:
+        allow_loading_unsigned_plugins: victoriametrics-logs-datasource
+      feature_toggles:
+        provisioning: true
+        kubernetesDashboards: true
+        grafanaAdvisor: true
+        alertingListViewV2: true
