--- a/postiz/external-secrets.yaml
+++ b/postiz/external-secrets.yaml
@@ -1,8 +1,8 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: cloudflared-secrets
-  namespace: cloudflared 
+  name: postiz-secrets
+  namespace: postiz
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -11,8 +11,8 @@ spec:
   refreshInterval: 10m
   dataFrom:
     - extract:
-        key: apps/cloudflared
+        key: apps/postiz
   target:
-    name: cloudflared-secrets
+    name: postiz-secrets 
     creationPolicy: Owner
     deletionPolicy: Delete
