--- a/clickhouse/service.yaml
+++ b/clickhouse/service.yaml
@@ -2,18 +2,31 @@ apiVersion: v1
 kind: Service
 metadata:
   name: clickhouse-svc
-  namespace: clickhouse 
+  namespace: clickhouse
 spec:
   selector:
     app: clickhouse-deploy
   type: ClusterIP
   ports:
-  - name: api
-    protocol: TCP
-    port: 9000
-    targetPort: 9000
-  - name: http
-    protocol: TCP
-    port: 8123
-    targetPort: 8123
-
+    - name: api
+      protocol: TCP
+      port: 9000
+      targetPort: 9000
+    - name: http
+      protocol: TCP
+      port: 8123
+      targetPort: 8123
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: clickhouse-zookeeper-svc
+  namespace: clickhouse
+spec:
+  selector:
+    app: clickhouse-zookeeper
+  type:
+  ports:
+    - protocol: TCP
+      port: 2181
+      targetPort: 2181
